--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         </article>
 
         <article id="skills">
-          <h2 class="major">Projects</h2>
+          <h2 class="major">Skills</h2>
           <!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
           <div style="margin-bottom: 10px">
             <div class="major" style="display: flex; align-items: center">
